# quaddrone

./: .gitignore  README.md  notes.txt
QuadDrone/: Arduino.h  notes.txt
QuadDrone/.svn/: wc.db
QuadDrone/.sync/: ID
QuadDrone/comms/: led.c  led.elf  led.h  led.hex  led.map  listen.py  main.c  makefile
QuadDrone/led/: led.c  led.elf  led.hex  led.map  makefile
QuadDrone/pwm/: a.out  char_test.c  clock_speed.h  comm.c  led.h  main.c  makefile  send_power.py
QuadDrone/trunk/: main.cpp  makefile  quad.cpp
QuadDrone/trunk/ardiuno ide/mavlink/: mavlink.ino
QuadDrone/trunk/ardiuno ide/mavlink.c/: mavlink.c.ino
QuadDrone/trunk/include/: quad.h
QuadDrone/trunk/tmp/: led_blink.hex
altair/: notes.txt
altair/comms/: comm.c  comm.h  listen.py  main.c  usart_notes.txt
altair/include/: led.h
altair/led/: .led.c.swp  led.c  led.h
altair/pwm/: .main.e.swp  comm.c  listen.py  main.c  makefile  pwm_notes.txt  send_power.py
altair/shared/: comm.c  led.c
altair/twi/src/: listen.py  main.c  makefile
files/: Accronyms.txt  Bootloader Schematics.docx
files/.svn/: wc.db
files/AVR/: JTAG pins.txt  Program Flow.txt  motors to pins.txt
files/AVR/Registers/: Main Register Log.xlsx  Timer1,3,4,5.xlsx  USART.xlsx  ~$Timer1,3,4,5.xlsx
files/AVR/Tutorials/: avr setup notes.txt
files/C# Ground Station/J2i.Net.XInputWrapper-noexe/: J2i.Net.XInputWrapper.sln
files/Hardware/: Hardware Specifications.xlsx
files/Hardware/APM/: Internal LEDs.txt
files/homepage/: index.html  personal.html
flight_code/: generic-gcc-avr.cmake  ground_station.py  gui.py  send_power.py  test_ground_station.py
flight_code/quad/: CMakeLists.txt  Motor.cpp  Motor.h
flight_code/quad/src/: ArduinoWrapper.cpp  ArduinoWrapper.h  CMakeLists.txt  CommsMgr.cpp  CommsMgr.h  Eeprom.cpp  Eeprom.h  Ground.cpp  Ground.h  I2C.cpp  I2C.h  I2CAddrSearcher.cpp  I2CAddrSearcher.h  I2CDriver.cpp  I2CDriver.h  I2Cdev.cpp  I2Cdev.h  ImuMgr.cpp  ImuMgr.h  InterruptMgr.cpp  InterruptMgr.h  LedMgr.cpp  LedMgr.h  MPU6050.cpp  MPU6050.h  MPU6050_6Axis_MotionApps20.h  Motor.cpp  Motor.h  MotorManager.cpp  MotorManager.h  Mpu.cpp  Mpu.h  QuadMgr.cpp  QuadMgr.h  QuadParams.cpp  QuadParams.h  QuadState.cpp  QuadState.h  Register.cpp  Register.h  (+21 more)
ground_station/.svn/: wc.db
ground_station/dependencies/: Readme.txt
ground_station/trunk/: GUI  GUI.py  WASD.py  joystick_drawer.py  joystick_handler.py  list_ports.py  listen.py  pwm_notes.txt  radio.py  xbox.py  xbox_test.py
ground_station/trunk/XPRMNT/: Google_Earth_url.py  arrow_keys_event.py  get_keys_pygame.py  jesse.py  progress_bar_test.py  radio.py  read_serial_port.py
old_builds/subsystem_test_builds/comms/: CMakeLists.txt  comms.elf  comms.hex  comms.map  main.c  makefile
old_builds/subsystem_test_builds/led/: led.c
old_builds/subsystem_test_builds/pwm/: main.c
old_builds/subsystem_test_builds/twi/: CMakeLists.txt  source.txt  twi_h.txt  twitest.c
old_builds/subsystem_test_builds/twi/src/: DCM.c  MPU6050.c  a.out  comm.c  main.c  makefile  mpu.c  send_power.py  tags  test.c  twi_master.c  usart.c  usart.h
old_builds/subsystem_test_builds/twi/src/addr_test/: MPU6050.c  MPU6050.h  addr_test.c  addr_test.elf  addr_test.hex  addr_test.map  comm.h  listen.py  makefile  twi_master.c  twi_master.h
(+73 files in other folders)
